fix(spring): align all variants to API contract specification
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>