@@ -1,6 +1,8 @@
 package com.apptemplate.api.controller;
 
+import com.apptemplate.api.dto.CreateDepartmentRequest;
 import com.apptemplate.api.dto.DepartmentDto;
+import com.apptemplate.api.dto.UpdateDepartmentRequest;
 import com.apptemplate.api.service.DepartmentService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -8,15 +10,16 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -39,72 +42,75 @@ class DepartmentControllerTest {
 
     @Test
     void getAllDepartments_returnsDepartments() throws Exception {
-        DepartmentDto dept = new DepartmentDto();
-        dept.setId(1L);
-        dept.setName("IT Department");
-        dept.setCode("IT");
+        DepartmentDto dept = DepartmentDto.builder()
+                .id(1L)
+                .name("IT Department")
+                .code("IT")
+                .isActive(true)
+                .build();
 
-        List<DepartmentDto> departments = Arrays.asList(dept);
-        when(departmentService.getAllDepartments()).thenReturn(departments);
+        Page<DepartmentDto> page = new PageImpl<>(List.of(dept));
+        when(departmentService.getDepartments(any(), any(), anyInt(), anyInt(), any(), any()))
+                .thenReturn(page);
 
         mockMvc.perform(get("/api/departments"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].name").value("IT Department"));
+                .andExpect(jsonPath("$.data[0].id").value(1))
+                .andExpect(jsonPath("$.data[0].name").value("IT Department"))
+                .andExpect(jsonPath("$.pagination").exists());
     }
 
     @Test
     void getDepartmentById_whenExists_returnsDepartment() throws Exception {
-        DepartmentDto dept = new DepartmentDto();
-        dept.setId(1L);
-        dept.setName("IT Department");
-        dept.setCode("IT");
+        DepartmentDto dept = DepartmentDto.builder()
+                .id(1L)
+                .name("IT Department")
+                .code("IT")
+                .isActive(true)
+                .build();
 
         when(departmentService.getDepartmentById(1L)).thenReturn(dept);
 
         mockMvc.perform(get("/api/departments/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.code").value("IT"));
-    }
-
-    @Test
-    void getDepartmentById_whenNotExists_returnsNotFound() throws Exception {
-        when(departmentService.getDepartmentById(999L)).thenReturn(null);
-
-        mockMvc.perform(get("/api/departments/999"))
-                .andExpect(status().isNotFound());
+                .andExpect(jsonPath("$.data.id").value(1))
+                .andExpect(jsonPath("$.data.code").value("IT"));
     }
 
     @Test
     void createDepartment_returnsCreatedDepartment() throws Exception {
-        DepartmentDto request = new DepartmentDto();
+        CreateDepartmentRequest request = new CreateDepartmentRequest();
         request.setName("HR Department");
         request.setCode("HR");
 
-        DepartmentDto created = new DepartmentDto();
-        created.setId(2L);
-        created.setName("HR Department");
-        created.setCode("HR");
+        DepartmentDto created = DepartmentDto.builder()
+                .id(2L)
+                .name("HR Department")
+                .code("HR")
+                .isActive(true)
+                .build();
 
         when(departmentService.createDepartment(any())).thenReturn(created);
 
         mockMvc.perform(post("/api/departments")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(2))
-                .andExpect(jsonPath("$.name").value("HR Department"));
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.data.id").value(2))
+                .andExpect(jsonPath("$.data.name").value("HR Department"));
     }
 
     @Test
     void updateDepartment_returnsUpdatedDepartment() throws Exception {
-        DepartmentDto request = new DepartmentDto();
+        UpdateDepartmentRequest request = new UpdateDepartmentRequest();
         request.setName("Updated Department");
 
-        DepartmentDto updated = new DepartmentDto();
-        updated.setId(1L);
-        updated.setName("Updated Department");
+        DepartmentDto updated = DepartmentDto.builder()
+                .id(1L)
+                .name("Updated Department")
+                .code("IT")
+                .isActive(true)
+                .build();
 
         when(departmentService.updateDepartment(eq(1L), any())).thenReturn(updated);
 
@@ -112,11 +118,13 @@ class DepartmentControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Updated Department"));
+                .andExpect(jsonPath("$.data.name").value("Updated Department"));
     }
 
     @Test
     void deleteDepartment_returnsNoContent() throws Exception {
+        doNothing().when(departmentService).deleteDepartment(1L);
+
         mockMvc.perform(delete("/api/departments/1"))
                 .andExpect(status().isNoContent());
 
