@@ -7,15 +7,16 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -35,98 +36,89 @@ class UserControllerTest {
     }
 
     @Test
-    void getAllUsers_returnsUsers() throws Exception {
-        UserDto user1 = new UserDto();
-        user1.setId(1L);
-        user1.setName("Test User");
+    void getAllUsers_returnsPagedResult() throws Exception {
+        UserDto user1 = UserDto.builder()
+                .id(1L)
+                .username("testuser")
+                .firstName("Test")
+                .lastName("User")
+                .email("test@test.com")
+                .build();
 
-        List<UserDto> users = Arrays.asList(user1);
-        when(userService.getAllUsers()).thenReturn(users);
+        Page<UserDto> page = new PageImpl<>(List.of(user1));
+        when(userService.getUsers(any(), any(), any(), anyInt(), anyInt(), any(), any()))
+                .thenReturn(page);
 
         mockMvc.perform(get("/api/users")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].name").value("Test User"));
+                .andExpect(jsonPath("$.data[0].id").value(1))
+                .andExpect(jsonPath("$.data[0].username").value("testuser"))
+                .andExpect(jsonPath("$.pagination").exists());
     }
 
     @Test
     void getUserById_whenExists_returnsUser() throws Exception {
-        UserDto user = new UserDto();
-        user.setId(1L);
-        user.setName("Test User");
-        user.setEmail("test@test.com");
+        UserDto user = UserDto.builder()
+                .id(1L)
+                .username("testuser")
+                .firstName("Test")
+                .lastName("User")
+                .email("test@test.com")
+                .build();
 
         when(userService.getUserById(1L)).thenReturn(user);
 
         mockMvc.perform(get("/api/users/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.name").value("Test User"));
-    }
-
-    @Test
-    void getUserById_whenNotExists_returnsNotFound() throws Exception {
-        when(userService.getUserById(999L)).thenReturn(null);
-
-        mockMvc.perform(get("/api/users/999"))
-                .andExpect(status().isNotFound());
+                .andExpect(jsonPath("$.data.id").value(1))
+                .andExpect(jsonPath("$.data.username").value("testuser"));
     }
 
     @Test
     void createUser_returnsCreated() throws Exception {
-        UserDto createdUser = new UserDto();
-        createdUser.setId(2L);
-        createdUser.setName("New User");
+        UserDto createdUser = UserDto.builder()
+                .id(2L)
+                .username("newuser")
+                .firstName("New")
+                .lastName("User")
+                .email("new@test.com")
+                .build();
 
         when(userService.createUser(any())).thenReturn(createdUser);
 
         mockMvc.perform(post("/api/users")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"New User\",\"email\":\"new@test.com\",\"password\":\"Password123\"}"))
+                        .content("{\"username\":\"newuser\",\"email\":\"new@test.com\",\"password\":\"Password123\"}"))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(2))
-                .andExpect(jsonPath("$.name").value("New User"));
+                .andExpect(jsonPath("$.data.id").value(2))
+                .andExpect(jsonPath("$.data.username").value("newuser"));
     }
 
     @Test
     void updateUser_whenExists_returnsUpdatedUser() throws Exception {
-        UserDto updatedUser = new UserDto();
-        updatedUser.setId(1L);
-        updatedUser.setName("Updated User");
+        UserDto updatedUser = UserDto.builder()
+                .id(1L)
+                .username("updateduser")
+                .firstName("Updated")
+                .lastName("User")
+                .email("updated@test.com")
+                .build();
 
         when(userService.updateUser(eq(1L), any())).thenReturn(updatedUser);
 
         mockMvc.perform(put("/api/users/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"Updated User\"}"))
+                        .content("{\"username\":\"updateduser\"}"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Updated User"));
+                .andExpect(jsonPath("$.data.username").value("updateduser"));
     }
 
     @Test
-    void updateUser_whenNotExists_returnsNotFound() throws Exception {
-        when(userService.updateUser(eq(999L), any())).thenReturn(null);
-
-        mockMvc.perform(put("/api/users/999")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"Updated User\"}"))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void deleteUser_whenExists_returnsNoContent() throws Exception {
-        when(userService.deleteUser(1L)).thenReturn(true);
+    void deleteUser_returnsNoContent() throws Exception {
+        doNothing().when(userService).deleteUser(1L);
 
         mockMvc.perform(delete("/api/users/1"))
                 .andExpect(status().isNoContent());
-    }
-
-    @Test
-    void deleteUser_whenNotExists_returnsNotFound() throws Exception {
-        when(userService.deleteUser(999L)).thenReturn(false);
-
-        mockMvc.perform(delete("/api/users/999"))
-                .andExpect(status().isNotFound());
     }
 }
